# acrobot

./: .dockerignore  .env.sample  .envrc  .gitignore  .prettierrc  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml
.github/: renovate.json5
.github/workflows/: ci.yml
sql/: ddl.sql
src/: __init__.py  cmd.py  cmds.py  conf.py  db.py  log.py  main.py  olly.py  repo.py  src.py
tests/: test_cmds.py  test_conf.py  test_db.py  test_log.py  test_repo.py
